refactor: add nunjucks filetype prefix

--- a/src/client/en/index.njk.html
+++ b/src/client/en/index.njk.html
@@ -1,8 +1,9 @@
 ---
-locale: nl
+locale: en
 permalink: /{{ locale }}/index.html
 ---
 {% extends 'layouts/default.njk.html' %}
 {% block main %}
-
+  {% set page = en.pages.home %}
+  {% include 'components/page-layout/page-layout.njk.html' %}
 {% endblock %}
