--- a/src/client/nl/_slug.html
+++ b/src/client/nl/_slug.html
@@ -5,7 +5,7 @@ pagination:
   size: 1
 permalink: /{{ locale }}/{{ pagination.items[0] | slug }}/index.html
 ---
-{% extends 'layouts/default.html' %}
+{% extends 'layouts/default.njk.html' %}
 {% block main %}
 
 {% endblock %}
