feat: render some content

--- a/src/client/en/_slug.njk.html
+++ b/src/client/en/_slug.njk.html
@@ -3,8 +3,12 @@ locale: en
 pagination:
   data: en.pages
   size: 1
+  filter:
+    - home
 permalink: /{{ locale }}/{{ pagination.items[0] | slug }}/index.html
 ---
+{% set page = en.pages[pagination.items[0]] %}
+{% set title = page.title %}
 {% extends 'layouts/default.njk.html' %}
 {% block main %}
   {% include 'components/page-layout/page-layout.njk.html' %}
