--- a/src/client/nl/_slug.njk.html
+++ b/src/client/nl/_slug.njk.html
@@ -7,7 +7,7 @@ pagination:
     - home
 permalink: /{{ locale }}/{{ pagination.items[0] | slug }}/index.html
 ---
-{% set page = [locale].pages[pagination.items[0]] %}
+{% set page = nl.pages[pagination.items[0]] %}
 {% set title = page.title %}
 {% extends 'layouts/default.njk.html' %}
 {% block main %}
